@@ -508,6 +508,11 @@ Details    : Use fsfilt_sync() for both the whole filesystem sync and
              individual file sync to eliminate dangerous inode locking
              with I_LOCK that can lead to a deadlock.
 
+Severity   : minor
+Bugzilla   : 15566
+Description: Update an obsolete wirecheck.c generator
+Details    : Update wirecheck.c/wirehdr.c and regenerate wiretest.c
+
 --------------------------------------------------------------------------------
 
 2007-12-07         Cluster File Systems, Inc. <info@clusterfs.com>
